# shellpilot

./: AGENTS.md  Cargo.toml  README.md  SKILL.md  mcp-config.example.json
src/: allowlist.rs  audit.rs  lib.rs  main.rs  tools.rs
