[package]
name = "shellpilot"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "time"] }

[dev-dependencies]
tempfile = "3"
